@@ -198,7 +198,7 @@ dfm.character <- function(x,
 #         valuetype <- "regex"
 #     }
     
-    dfm(tokenizedTexts, verbose=verbose, toLower=toLower, stem=stem, 
+    dfm(tokenizedTexts, verbose=verbose, toLower = FALSE, stem=stem, 
         ignoredFeatures=ignoredFeatures, keptFeatures = keptFeatures,
         language=language,
         thesaurus=thesaurus, dictionary=dictionary, valuetype = valuetype, 
@@ -210,14 +210,14 @@ dfm.character <- function(x,
 #' @importFrom utils glob2rx
 #' @export
 dfm.tokenizedTexts <- function(x, 
-                               verbose=TRUE,
-                               toLower = TRUE,
-                               stem=FALSE, 
-                               ignoredFeatures=NULL, 
-                               keptFeatures=NULL,
-                               language="english",
-                               thesaurus=NULL, 
-                               dictionary=NULL, 
+                               verbose = TRUE,
+                               toLower = FALSE,
+                               stem = FALSE, 
+                               ignoredFeatures = NULL, 
+                               keptFeatures = NULL,
+                               language = "english",
+                               thesaurus = NULL, 
+                               dictionary = NULL, 
                                valuetype = c("glob", "regex", "fixed"),
                                ...) {
     
@@ -237,6 +237,12 @@ dfm.tokenizedTexts <- function(x,
     
     if (verbose && grepl("^dfm\\.tokenizedTexts", sys.calls()[[2]])) {
         cat("Creating a dfm from a tokenizedTexts object ...")
+    }
+
+    # lowercase if necessary 
+    if (toLower) {
+        if (verbose) cat("\n   ... lowercasing", sep="")
+        x <- toLower(x)
     }
 
     # get document names
